--- a/admin/.env.production
+++ b/admin/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://cxapi.tecqm.club/designer'
+VUE_APP_BASE_API = 'http://212.129.244.20:3000'
 VUE_APP_BASE_UPLOAD_URL = 'http://cxapi.tecqm.club'
 
