可以看书啦

--- a/wechat-applet/project.config.json
+++ b/wechat-applet/project.config.json
@@ -42,7 +42,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.9.4",
   "appid": "wx84963d0ed675e7d0",
-  "projectname": "Read A Book",
+  "projectname": "Read%20A%20Book",
   "debugOptions": {
     "hidedInDevtools": []
   },
