--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ali-oss": "^6.13.2",
     "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.5",
+    "co": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -19,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
